updated meta tags

--- a/src/app.html
+++ b/src/app.html
@@ -2,9 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="Svelte demo app" />
-		<link rel="icon" href="%svelte.assets%/favicon.png" />
+		<meta name="description" content="Front End Web Developer located in Kraków, Poland" />
+		<meta name=”author” content="Przemysław Szczepaniak">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" href="%svelte.assets%/favicon.png" />
 		%svelte.head%
 	</head>
 	<body>
