--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
 		<meta name="description" content="Front End Web Developer located in Kraków, Poland" />
 		<meta name=”author” content="Przemysław Szczepaniak">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="icon" href="%svelte.assets%/favicon.png" />
+		<link rel="icon" href="%svelte.assets%/logo.png" />
 		%svelte.head%
 	</head>
 	<body>
